travis: explicit get+build+test+vet

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: go
 
 install:
   - rm -rf examples
-  - go get -t ./...
+  - go get -t -v ./...
+  - go build -v ./...
+
+script:
+  - go test -v ./...
+  - go vet ./..
